hphp/hack/test/typecheck/reactive/owned_mutable9.php.exp
File "owned_mutable9.php", line 9, characters 7-7:
Class B does not correctly implement all required members  (Typing[4263])
File "owned_mutable9.php", line 9, characters 17-17:
Some members are incompatible with those declared in type A
Read the following to see why:
File "owned_mutable9.php", line 12, characters 19-19:
Member f has the wrong type
File "owned_mutable9.php", line 5, characters 42-43:
Incompatible mutabilities:
File "owned_mutable9.php", line 5, characters 42-43:
This parameter is owned mutable
File "owned_mutable9.php", line 12, characters 23-24:
This parameter is immutable
